methods.flowerpot.FlowerPot.scala.error
Compilation error:
FlowerPot:30: error: ':' expected but '=' found.
def tourneDroite(nb=1:Int)
                   ^FlowerPot:47: error: identifier expected but '}' found.
}
^